Allow saving after editing

--- a/sapling/editsurface/templates/editsurface/editsurface.html
+++ b/sapling/editsurface/templates/editsurface/editsurface.html
@@ -225,3 +225,13 @@
 <script src="{% static "VisualEditor/modules/sandbox/sandbox.js" %}"></script>
 <!-- Parsers and converters -->
 <script src="{% static "VisualEditor/modules/parser/mediawiki.DOMConverter.js" %}"></script>
+<!-- Saving -->
+<script>
+    $(document).ready(function(){
+        var input = $('input[name="{{ name }}"]');
+        input.closest('form').submit(function(){
+            wikidom = window.documentModel.getPlainObject();
+            input.val(es.HtmlSerializer.stringify( wikidom ));
+        });
+    });
+</script>
