Remove whitespace, was creating extra paragraphs

--- a/sapling/editsurface/templates/editsurface/editsurface.html
+++ b/sapling/editsurface/templates/editsurface/editsurface.html
@@ -1,7 +1,5 @@
 {% load static from staticfiles %}
-<div id="initial_value" style="display: none">
-    {{ value|safe }}
-</div>
+<div id="initial_value" style="display: none">{{ value|safe }}</div>
 <link rel="stylesheet" href="{% static "VisualEditor/modules/es/styles/es.SurfaceView.css" %}">
 <link rel="stylesheet" href="{% static "VisualEditor/modules/es/styles/es.ContextView.css" %}">
 <link rel="stylesheet" href="{% static "VisualEditor/modules/es/styles/es.ContentView.css" %}">
