Pass content through {% spaceless %} to avoid extra paragraphs

--- a/sapling/editsurface/templates/editsurface/editsurface.html
+++ b/sapling/editsurface/templates/editsurface/editsurface.html
@@ -1,5 +1,7 @@
 {% load static from staticfiles %}
+{% spaceless %}
 <div id="initial_value" style="display: none">{{ value|safe }}</div>
+{% endspaceless %}
 <link rel="stylesheet" href="{% static "VisualEditor/modules/es/styles/es.SurfaceView.css" %}">
 <link rel="stylesheet" href="{% static "VisualEditor/modules/es/styles/es.ContextView.css" %}">
 <link rel="stylesheet" href="{% static "VisualEditor/modules/es/styles/es.ContentView.css" %}">
