--- a/sapling/themes/sapling/assets/css/site.css
+++ b/sapling/themes/sapling/assets/css/site.css
@@ -92,6 +92,12 @@ textarea, input, select {
     margin-left: 5em;
     margin-right: 8em;
 }
+@media screen and (max-width: 500px) {
+    #main {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+    }
+}
 
 /*
 ====================================
@@ -137,6 +143,24 @@ textarea, input, select {
     padding-left: 3.5em;
     min-height: 4.2em;
 }
+@media screen and (max-width: 500px) {
+    #header {
+        background: #fafafa url(../img/body-bg.png) top left repeat;
+        border: none;
+    }
+    #header_bar {
+        background: #E8ECEF url(../img/header-bg.png) top left repeat;
+        margin: 0;
+        margin-top: 3.5em;
+        padding: 0;
+        min-height: 0;
+        width: 100%;
+        border-bottom: 1px solid #DAE1E5;
+    }
+    #header_bar > div {
+        margin: 0.5em;
+    }
+}
 #header_bar a, #header_bar a:link {
     color: #444;
 }
@@ -170,7 +194,12 @@ textarea, input, select {
     font-size: 80%;
     color: #747474;
 }
-
+@media screen and (max-width: 500px) {
+    #object_title {
+      font-size: 150%;
+      vertical-align: middle;
+    }
+}
 #site_title {
     background: #fafafa url(../img/body-bg.png) top left repeat;
     min-height: 3.95em;
@@ -196,7 +225,21 @@ textarea, input, select {
 #site_title a:hover {
     color: #111;
 }
-
+@media screen and (max-width: 500px) {
+    #site_title {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        border: none;
+        clear: both;
+        min-height: 0;
+        position: relative;
+        top: -2em;
+    }
+    #site_title h1 {
+        margin: 0.3em;
+    }
+}
 #object_actions {
     display: table-cell;
     height: 100%;
@@ -216,7 +259,6 @@ textarea, input, select {
     margin-bottom: 0;
     margin-right: 0.5em;
 }
-
 #login_info {
     float: right;
     clear: right;
@@ -228,7 +270,19 @@ textarea, input, select {
     float: left;
     margin-right: 0.8em;
 }
-
+@media screen and (max-width: 500px){
+    #login_info {
+        display: block;
+        float: none;
+        text-align: right;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    #login_info > div {
+        margin: 0.5em;
+    }
+}
 #header .site_search {
     float: right;
     clear: right;
@@ -248,7 +302,28 @@ textarea, input, select {
     padding-left: 30px;
     margin-right: 0.5em;
 }
+@media screen and (max-width: 500px) {
+    #header {
+        margin: 0;
+        padding: 0;
+    }
+    #header .site_search {
+        float: none;
+        position: relative;
+        top: 6em;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+    }
+}
 
+@media screen and (max-width: 400px) {
+    .site_search input[type="submit"] {
+        display: none;
+    }
+    #header .site_search input[type="text"], #header .site_search #id_q {
+        width: 100%;
+    }
+}
 /*
 ====================================
  Map widget on a page
@@ -362,7 +437,24 @@ textarea, input, select {
     border: 1px solid #bfbfbf;
     color: #111;
 }
-
+@media screen and (max-width: 500px) {
+    #nav {
+        font-size: 86%;
+        background: red;
+        margin: 0.5em;
+        padding: 0;
+        float: none;
+        position: relative;
+        top: -3em;
+    }
+    #nav li {
+        margin: 0.2em;
+    }
+    
+    #nav li a {
+        padding: 0.5em 0.3em 0.5em 0.3em;
+    }
+}
 /*
 ====================================
  Footer
@@ -494,6 +586,14 @@ input[type="text"], input[type="password"] {
     height: 20px;
     margin-bottom: 5px;
     background: #fff;
+}
+
+@media screen and (max-width: 500px) {
+    input[type="text"], input[type="password"] {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 select {
     display: block;
@@ -750,12 +850,27 @@ div.templates li {
     margin-top: -0.6em;
 }
 
-
 #recentchanges li {
     list-style-type: none;
     margin-left: 0;
     padding-left: 30px;
     margin-bottom: 0.7em;
+}
+
+@media screen and (max-width: 500px) {
+    #recentchanges #limit_to {
+        float: none;
+        height: 2em;
+        margin: 0;
+        font-size: 95%;
+    }
+    #recentchanges h3 {
+        font-size: 100%;
+    }
+    #recentchanges li {
+        padding-left: 0;
+        margin-left: 0;
+    }
 }
 
 #recentchanges .changelabel {
